--- a/.gitignore
+++ b/.gitignore
@@ -142,7 +142,7 @@ typings/
 .serverless
 ### Python template
 # Byte-compiled / optimized / DLL files
-__pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 
