--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
+AmberLite==16.0
+AmberTools==17.0
 Click==7.0
-dash==1.2.0
-dash-core-components==1.1.2
-dash-bootstrap-components==0.7.1
-dash-dangerously-set-inner-html==0.0.2
-dash-html-components==1.0.1
-dash-renderer==1.0.1
-dash-table==4.2.0
+dash==1.8.0
+dash-bootstrap-components==0.8.1
+dash-core-components==1.7.0
+dash-daq==0.3.3
+dash-html-components==1.0.2
+dash-renderer==1.2.3
+dash-table==4.6.0
 Flask==1.1.1
 Flask-Compress==1.4.0
-future==0.17.1
+future==0.18.2
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.10.3
 MarkupSafe==1.1.1
-plotly==4.1.1
+MMPBSA.py==16.0
+packmol-memgen==1.0.5rc0
+ParmEd==3.2.0
+pdb4amber==1.7.dev0
+plotly==4.5.0
+pyMSMT==19.0
+pytraj==2.0.5
 retrying==1.3.3
-six==1.12.0
-Werkzeug==0.15.6
+sander==16.0
+six==1.14.0
+Werkzeug==0.16.0
